2013-09-06  Roland Levillain  <roland@lrde.epita.fr>

	Do not harcode OLN_PACKAGE_AUTHORS in Milena's mln/version.hh.in.

	* mln/version.hh.in (OLN_PACKAGE_AUTHORS): Set it to
	@PACKAGE_AUTHORS@.

2013-09-06  Roland Levillain  <roland@lrde.epita.fr>

	Generate Milena's mln/version.hh in the source tree.

	* Makefile.am ($(srcdir)/mln/version.hh): New target, generating
	mln/version.hh in the source tree using make instead of configure.
	(edit): New.
	(EXTRA_DIST): Add mln/version.hh.in
	(nobase_nodist_include_HEADERS): Remove mln/version.hh.
	* mln/version.hh: New (generated).
	* headers.mk: Regen.

2013-09-05  Roland Levillain  <roland@lrde.epita.fr>

	Remove an unnecessary #include from an example of the tutorial.

	* doc/examples/tuto3/first_routine.cc: Here.
	* doc/examples/split/tuto3_first_routine-1.cc.raw: Regen.

2013-09-02  Roland Levillain  <roland@lrde.epita.fr>

	Add parentheses around complex operands of operator `|'.

	* apps/mesh-segm-skel/mesh-complex-max-curv-1-collapse.cc,
	* apps/mesh-segm-skel/mesh-complex-max-curv-2-collapse.cc:
	Here, as suggested by g++ 4.7.

2013-09-02  Roland Levillain  <roland@lrde.epita.fr>

	Do not run test-mixed in Milena apps with the `check' target.

	* apps/generic-skel/test-mixed.in,
	* apps/mesh-segm-skel/test-mixed.in:
	Add a `-wadgmm-2010' suffix to saved images to distinguish them
	from outputs of other tests.
	* apps/generic-skel/Makefile.am,
	* apps/mesh-segm-skel/Makefile.am
	(MOSTLYCLEANFILES): Adjust.
	Add files generated by disabled test cases.
	(generated_checked_tests): New.
	Contain all generated checked tests.
	(generated_tests): Set it to contain all test (checked
	automatically and run manually).
	(TESTS): Set it to $(generated_checked_tests).
	Aesthetic changes.

2013-08-31  Roland Levillain  <roland@lrde.epita.fr>

	Aesthetic changes in Milena apps Makefiles.

	* apps/generic-skel/Makefile.am,
	* apps/mesh-segm-skel/Makefile.am:
	Here.

2013-08-31  Roland Levillain  <roland@lrde.epita.fr>
